@@ -5,6 +5,7 @@
 package com.linkedin.kafka.cruisecontrol.executor;
 
 import com.linkedin.kafka.cruisecontrol.servlet.response.JsonResponseField;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -29,7 +30,7 @@ public enum ConcurrencyType {
   @JsonResponseField
   LEADERSHIP_BROKER;
 
-  private static final List<ConcurrencyType> CACHED_VALUES = List.of(values());
+  private static final List<ConcurrencyType> CACHED_VALUES = Arrays.asList(values());
 
   /**
    * Use this instead of values() because values() creates a new array each time.
